--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -39,6 +39,8 @@ h1, h2, h3, h4 {
 }
 
 h1 {
+  font-size: 2rem;
+
   & small {
     display: block;
     font-size: 1.2rem;
@@ -65,5 +67,5 @@ a {
 #app {
   max-width: var(--maxWidth);
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 2rem 5rem 2rem;
 }
