Fix button with icon

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -106,8 +106,8 @@ button, [role="button"] {
     }
   }
 
-  & svg {
-    margin-right: 0.5rem;
+  & svg + span {
+    padding-left: 0.5rem;
   }
 }
 
