--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -77,6 +77,7 @@ button, [role="button"] {
   cursor: pointer;
   background-color: var(--main);
   border-radius: 0.25rem;
+  border: none;
   color: var(--white);
   padding: 0.5rem 1rem 0.75rem 1rem;
   text-decoration: none;
@@ -109,6 +110,17 @@ button, [role="button"] {
   & svg + span {
     padding-left: 0.5rem;
   }
+}
+
+input[type="search"], input[type="text"] {
+  font-family: inherit;
+  padding: 0.125rem 0.25rem 0.375rem 0.25rem;
+  border: none;
+  border-radius: 0.25rem;
+  font-size: 0.8rem;
+  background-color: color(var(--main) alpha(-80%));
+  box-shadow: inset 0 -0.25rem 0 var(--mainDarker);
+  color: var(--white);
 }
 
 #app {
