--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -132,3 +132,77 @@ input[type="search"], input[type="text"] {
 .flex-container {
   display: flex;
 }
+
+.frozen {
+  overflow: hidden;
+}
+
+.video {
+  background-color: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(10px);
+
+  & .details {
+    display: none;
+    max-width: var(--maxWidth);
+    margin: 0 auto;
+
+    & > div {
+      padding: 2rem;
+    }
+  }
+
+  &.active {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+    overflow: auto;
+    overflow-scrolling: touch;
+
+    & > button {
+      display: none;
+    }
+
+    & .details {
+      display: block;
+    }
+
+    & .close {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      z-index: 3;
+      background-color: var(--main);
+      border-radius: 50%;
+      display: flex;
+      padding: 0.5rem;
+    }
+
+    & video {
+      width: 100%;
+      display: flex;
+    }
+  }
+
+  & .models {
+    color: var(--whiteDarker);
+  }
+
+  & .specs {
+    justify-content: space-between;
+    font-size: 0.8rem;
+
+    & span {
+      color: var(--mainLighter);
+    }
+  }
+
+  & .purchase-options {
+    margin-top: 2rem;
+    text-align: center;
+  }
+}
