--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -81,6 +81,7 @@ button, [role="button"] {
   border: none;
   color: var(--white);
   padding: 0.5rem 1rem 0.75rem 1rem;
+  margin: 0;
   text-decoration: none;
   box-shadow: inset 0 -0.25rem 0 var(--mainDarker);
   transition: all 100ms linear;
