--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -122,13 +122,16 @@ form {
 
 input, textarea {
   font-family: inherit;
-  padding: 0.125rem 0.25rem 0.375rem 0.25rem;
-  border: none;
-  border-radius: 0.25rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 1rem;
   font-size: 0.8rem;
   background-color: color(var(--main) alpha(-80%));
-  box-shadow: inset 0 -0.25rem 0 var(--mainDarker);
-  color: var(--white);
+  border: 0.125rem solid var(--mainDarker);
+  color: var(--whiteDarker);
+}
+
+[hidden] {
+  display: none;
 }
 
 #app {
