Use proper modal, add favicon

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -148,55 +148,17 @@ input, textarea {
   overflow: hidden;
 }
 
-.video {
-  background-color: rgba(0, 0, 0, 0.8);
-  backdrop-filter: blur(10px);
+.video-details {
+  max-width: var(--maxWidth);
+  margin: 0 auto;
 
-  & .details {
-    display: none;
-    max-width: var(--maxWidth);
-    margin: 0 auto;
-
-    & > div {
-      padding: 2rem;
-    }
+  & > div {
+    padding: 2rem;
   }
 
-  &.active {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 2;
-    overflow: auto;
-    overflow-scrolling: touch;
-
-    & > button {
-      display: none;
-    }
-
-    & .details {
-      display: block;
-    }
-
-    & .close {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      z-index: 3;
-      background-color: var(--main);
-      border-radius: 50%;
-      display: flex;
-      padding: 0.5rem;
-    }
-
-    & video {
-      width: 100%;
-      display: flex;
-    }
+  & video {
+    width: 100%;
+    display: flex;
   }
 
   & .models {
