--- a/src/assets/css/components/home.css
+++ b/src/assets/css/components/home.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 1rem;
+    margin-top: 2rem;
 
     & img {
       max-width: 100%;
