Add loading spinner

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -9,6 +9,7 @@
 @import './components/banner-links.css';
 @import './components/contact.css';
 @import './components/home.css';
+@import './components/loader.css';
 @import './components/modal.css';
 @import './components/navigation.css';
 @import './components/search.css';
