--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -11,6 +11,7 @@
 @import './components/home.css';
 @import './components/loader.css';
 @import './components/modal.css';
+@import './components/models.css';
 @import './components/navigation.css';
 @import './components/search.css';
 @import './components/the-header.css';
