Vastly simplify store

--- a/src/assets/css/components/home.css
+++ b/src/assets/css/components/home.css
@@ -32,3 +32,11 @@
     }
   }
 }
+
+@media (width >= 820px) {
+  .home {
+    & .grid {
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
+  }
+}
