--- a/src/assets/css/components/home.css
+++ b/src/assets/css/components/home.css
@@ -33,7 +33,7 @@
   }
 }
 
-@media (width >= 820px) {
+@media (min-width: 820px) {
   .home {
     & .grid {
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
