--- a/src/assets/css/components/models.css
+++ b/src/assets/css/components/models.css
@@ -17,6 +17,7 @@
       background-image: url(/static/models.jpg);
       background-size: 1560px 3120px;
       border-radius: 0.25rem;
+      box-shadow: inset 0 0 0 1px #000;
       transition: all 200ms ease-out;
     }
 
