--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -12,6 +12,7 @@
 @import './components/loader.css';
 @import './components/modal.css';
 @import './components/models.css';
+@import './components/model-details.css';
 @import './components/navigation.css';
 @import './components/search.css';
 @import './components/the-header.css';
