Show model's videos on details page

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -32,4 +32,29 @@ img {
 
 .frozen {
   overflow: hidden;
+  position: absolute;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  grid-gap: 1rem;
+  margin-top: 2rem;
+
+  & img {
+    max-width: 100%;
+    display: block;
+    border-radius: 0.125rem;
+    transition: transform 100ms ease-out;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
+
+@media (min-width: 820px) {
+  .grid {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
 }
