--- a/src/assets/css/components/buttons.css
+++ b/src/assets/css/components/buttons.css
@@ -31,6 +31,19 @@ button, [role="button"] {
     opacity: 0.5;
   }
 
+  &.large {
+    font-size: 1.25rem;
+    padding: 0.75rem 1.5rem 1rem 1.5rem;
+
+    &:not([disabled]):hover {
+      padding: 0.75rem 1.5rem 0.75rem 1.5rem;
+    }
+  }
+
+  &.two-lines {
+    flex-direction: column;
+  }
+
   &.transparent {
     -webkit-appearance: none;
     border: none;
@@ -61,7 +74,22 @@ button, [role="button"] {
     }
   }
 
+  &.secondary {
+    background-color: var(--grey);
+    box-shadow: inset 0 -0.25rem 0 var(--greyDarker);
+
+    & small {
+      opacity: 0.9;
+    }
+  }
+
   & svg + span {
     padding-left: 0.5rem;
+  }
+
+  & small {
+    font-size: 0.75em;
+    color: var(--whiteDarker);
+    opacity: 0.7;
   }
 }
