--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -16,6 +16,7 @@
 @import './components/navigation.css';
 @import './components/search.css';
 @import './components/the-header.css';
+@import './components/the-footer.css';
 @import './components/video-details.css';
 @import './components/warning.css';
 
