--- a/src/assets/css/components/video-details.css
+++ b/src/assets/css/components/video-details.css
@@ -25,7 +25,13 @@
   }
 
   & .purchase-options {
-    margin-top: 2rem;
+    margin-top: 1rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+
+    & div {
+      margin: 1rem auto 0 auto;
+    }
   }
 }
